Alteracao do HTML

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 <h1>Oi</h1>   
 <p>Meu nome é Gustavo!</p>
+<p>
+    Meu nome é Sabrina, colega de classe do Gustavo
+</p>
             
 </body>
 </html>
